# sonification

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: audio_output.mid  lunarCraterAges.mid  output.mid  sonification_research.ipynb  sonify_wip.ipynb  test_arpeggio.mid  test_chords.mid  trump_vs_zelenskyy_logistic_high_vs_low_scores_df.parquet
sonification/: __init__.py  chords.py  converters.py  pyo_util.py  sonify_scrap.py  util.py
sonification/scrap/: pyo_dynamic_01.py  pyo_dynamic_02.py  sonify_with_music21.py  tvz_sonify_with_pyo.py
sonify/: __init__.py  chords.py  converters.py  sonify_scrap.py  util.py
