[metadata]
name = sonification
version = 0.0.9
url = https://github.com/thorwhalen/sonification
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Map data to sound allowing it to be interpreted it in an auditory manner
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = sonification

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

